// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select 1`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;

exports[`select 2`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;

exports[`select 3`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,0]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;

exports[`select 4`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,1]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,0]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;

exports[`select 5`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·4·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[1,0,9]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,1]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,0]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;

exports[`select 6`] = `
<div
  id="__next"
>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    tabindex="0"
  >
    <div>
      <div
        style="font-size:24px"
      >
        ·heading·
      </div>
      <div
        style="font-size:16px"
      >
        ·paragraph·
      </div>
    </div>
  </div>
  <pre
    style="height:48px;overflow:auto"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·5·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[1,0,9],"focus":[0,0,0]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·4·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[1,0,9]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,1]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,0]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]},"tabLostFocus":false}·
    </span>
    <br />
    <br />
    <span
      style="color:#888"
      title="{'tag':'div','children':[{'tag':'div','props':{'style':{'fontSize':'24px'}},'children':[{'text':'heading'}]},{'tag':'div','props':{'style':{'fontSize':'16px'}},'children':[{'text':'paragraph'}]}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":false,"selection":null,"tabLostFocus":false}·
    </span>
    <br />
    <br />
  </pre>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
    <button
      class="unselect"
      type="button"
    >
      ·unselect·
    </button>
  </div>
</div>
`;
